# sc-api-audio

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: windows-deployment-package.yaml
inc/: AudioCapturer.h  ScApiContext.h
inc/gui/: MainWindow.h  OutputDeviceControlWindow.h
libs/: CMakeLists.txt
libs/audio_control_gui/: CMakeLists.txt  shader_util.cmake
libs/audio_control_gui/inc/audio_control_gui/: AudioControlWidget.h  mEqBandWidget.h  mEqWidget.h
libs/audio_control_gui/src/: AudioControlWidget.cpp  EqualizerWidget.cpp  EqualizerWidget.h  WaveFormVisualizerWidget.cpp  WaveFormVisualizerWidget.h  WaveFormVisualizerWidget_fragment_shader.glsl  WaveFormVisualizerWidget_vertex_shader.glsl  mEqBandWidget.cpp  mEqWidget.cpp
libs/audio_control_gui/src/ui/: AudioControlWidget.ui  EqualizerWidget.ui  mEqBandWidget.ui  mEqWidget.ui
libs/audio_player/: CMakeLists.txt
libs/audio_player/inc/audio_player/: ApiAudioPlayer.h  AudioProcessor.h  OutputDevice.h  Resampler.h  Samples.h  StereoConverter.h
libs/audio_player/src/: ApiAudioPlayer.cpp  AudioProcessor.cpp  OutputDevice.cpp  Resampler.cpp  StereoConverter.cpp
libs/crash_detection/: CMakeLists.txt
libs/crash_detection/inc/crash_detection/: crash_detection.h
libs/crash_detection/src/: async_signal_safe_io.h  crash_detection.cpp
libs/gui/: CMakeLists.txt
libs/gui/inc/gui/: MainWindow.h
libs/gui/src/: EqCurveWidget.cpp  EqCurveWidget.h  MainWindow.cpp  WaveFormVisualizerWidget.cpp  WaveFormVisualizerWidget.h
libs/gui/src/ui/: MainWindow.ui
libs/utils/: CMakeLists.txt
libs/utils/inc/utils/: ThreadSafeRingBuffer.h  ThreadSafeSingletonBase.h
src/: AudioCapturer.cpp  ScApiContext.cpp  ScApiContext.h  main.cpp
src/gui/: MainWindow.cpp  OutputDeviceControlWindow.cpp
src/gui/ui/: MainWindow.ui  OutputDeviceControlWindow.ui
